--- a/Projects/README.adoc
+++ b/Projects/README.adoc
@@ -21,6 +21,9 @@
 === link:https://github.com/RedHatInsights/insights-core/pull/2362[RedHat Support Insights Parser for /var/log/samba]
 === link:https://github.com/RedHatInsights/insights-core/pull/2362[RedHat Support Insights Parser /etc/dirsrv/slapd-<>/dse.ldif]
 
+== Thread Pool
+=== link:/Projects/ThreadPool-64Pools-4ThreadPerPool[ThreadPool 64Pools 4ThreadsPerPool]
+
 == OOD/Object Oriented Design
 === Behavioral
 ==== link:/Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Chain-of-Resp/[1. Chain of Responsibilty]
