--- a/Projects/Machine_Learning/Image_Classification_into_10_categories_0_through_9/README.adoc
+++ b/Projects/Machine_Learning/Image_Classification_into_10_categories_0_through_9/README.adoc
@@ -1,5 +1,5 @@
 :toc:
 :toclevels: 5
 
-== link:https://amitkumar50.github.io/Machine%20Learning/Code/Image%20Classification.html[Documentation]
+== link:https://amitkumar50.github.io/Machine%20Learning/Code/Image%20Classification.html[Documentation on github.io]
 == Code:
