--- a/System-Design/Concepts/Databases/README.adoc
+++ b/System-Design/Concepts/Databases/README.adoc
@@ -1,51 +1,11 @@
 :toc:
 :toclevels: 6
 
-=== SQL/Relational/Structured vs noSQL/nonRelational/unStructured
+=== link:https://amitkumar50.github.io/System_Design/Concepts/Databases/SQL_vs_NoSQL.html[SQL/Relational/Structured vs noSQL/nonRelational/unStructured]
 Today most organization are using SQL+noSQL DB combinations. 2019 stats:   MySQL + MongoDB: 34.15%,  MySQL + PostgreSQL: 9.76%
 
-|===
-| DB | SQL, Relational, Structured | noSQL, nonRelational, unStructured
-
-|Examples 
-a| 
-* Amazon(Aurora, RDS), MySQL, postgreSQL, mariaDB
-a|
-* Semistructured: Amazon (S3, dynamoDB), Apache Cassandra 
-* Unstructured: Amazon S3, Apache CouchDB, MongoDB
-
-|Types
-a|
-* ORDBMS(Object RDBMS):RDBMS build on OOD.Eg:PostGreSQL 
-* RDBMS: mySQL
-a|
-* a. KEY-VALUE DB: redis, Amazon dynamoDB, Voldemort, sled(rust) 
-* b. WIDE-COLUMN DB: Stores data as columns instead of rows. Eg: Cassandra, HBase 
-* c. DOCUMENT DB: Data is stored in documents(XML, JSON, binary) Eg: mongoDB, Amazon dynamoDB.
-* d. GRAPH DB: Data is stored in form of graph.Eg: Neo4J, HyperGraphDB
-
-| Storage format |Table(Records searched using primary key) | <key, value> or xml or json or objects
-
-| Huge data support | no(becomes slow). Can store upto ~1TB | yes
-
-|Storage | May be on 1 or multiple servers | Always on multiple low cost nodes[commodity hardware]
-
-|Scaling | Vertical. No Horizontal | Horizontal, cheaper, raw data can be pushed:no schema, pro
-
-|Tech Support | Good, query-writing:simple | Poor, query-writing:complex
-
-|Schema | fixed | not fixed. defining schema for unstructured data is very tough
-|===
-
-==== 1. Why SQL cannot store Huge data?
-- _1. Limit on Table Size:_ if a Table grows beyond (1GB~1TB), queries becomes slow
-- _2. Backups, Replication slow:_ if a Table grows beyond (1GB~1TB), backups takes time
-
-==== 2. Why SQL cannot be scaled Horizontally?
-- _1. Rigid Database Model:_ makes it difficult to break & distribute data on several nodes(scale horizontally)
-- _2. Transactions:_ SQL DB relies on transactions(locking entire row or table) which will be difficult on multiple nodes.
-- _3. Complex quries & joins:_ SQL db handles complex queries & joins across tables which is difficult on multiple nodes.
-- _4. Replication:_ SQL Db does replication of data. Now when data is distributed this can be challenging.
+==== link:http://127.0.0.1:5500/System_Design/Concepts/Databases/SQL/SQL_Issues.html[1. SQL cannot store Huge data?]
+==== link:http://127.0.0.1:5500/System_Design/Concepts/Databases/SQL/SQL_Issues.html[2. Why SQL cannot be scaled Horizontally?]
 
 === Object vs Block vs File storage
 
