--- a/DS_Questions/Questions/Strings/Length_Find/First_Unique_Character_in_a_String.adoc
+++ b/DS_Questions/Questions/Strings/Length_Find/First_Unique_Character_in_a_String.adoc
@@ -55,3 +55,20 @@ public:
     }
 };
 ```
+==== Rust
+```rs
+impl Solution {
+    pub fn first_uniq_char(s: String) -> i32 {
+        let mut dic:Vec<i32> = vec![0; 26];
+        s.chars().for_each(|ele| {
+            dic[(ele as u8 - b'a') as usize] += 1;
+        });
+        for (i, c) in s.chars().enumerate() {
+            if dic[(c as u8 - b'a') as usize] == 1 {
+                return i as i32;
+            }
+        }
+        -1
+    }
+}
+```
